--- a/translations/admin.fr.xlf
+++ b/translations/admin.fr.xlf
@@ -3130,7 +3130,7 @@
       </notes>
       <segment>
         <source>Neue Saison registrieren</source>
-        <target>Neue Saison registrieren</target>
+        <target>Enregistrer une nouvelle saison</target>
       </segment>
     </unit>
     <unit id="bIa5kIj" name="Änderungen speichern">
@@ -3139,7 +3139,7 @@
       </notes>
       <segment>
         <source>Änderungen speichern</source>
-        <target>Änderungen speichern</target>
+        <target>Enregistrer les modifications</target>
       </segment>
     </unit>
   </file>
